main.css
body {
    font-family: sans-serif;
    background-color: teal;
}

.datBoi {
    height: 125px;
    width: 100px;
}

.img {
    height: 50px;
    width: 50px;
}

.sentence {
    margin-top: 40px;
}

#checkboxes {
    margin-left: 120px;
}

#alert {
    position: absolute;
    z-index: 999999;
    margin-left: 400px;
    margin-top: 100px;
}

#users {
    padding: 10px;
}

#navbar {
    border: 3px solid;
    border-bottom-color: #535353;
    border-right-color: #535353;
    border-left-color: #dbdbdb;
    border-top-color: #dbdbdb;
    background-color: #bfbfbf;
    padding: 2px;
}

#textInput {
    width: 70%;
}

.button {
    margin-left: 20px;
}

.ok {
    margin-left: 180px;
}

button {
    border-bottom: 1px solid black;
    border: 2px solid;
    border-bottom-color: #444;
    border-right-color: #444;
    border-left-color: gainsboro;
    border-top-color:  gainsboro;
    background-color: #bfbfbf;
}


.msg-timestamp {
    font-size: .75em;
    padding: -1em;
}

button:active {
    border: 1px solid black;
}

span:active {
    outline: 1.5px dotted black;
}

button:focus, button:active {
    outline: none;
    box-shadow: none;
 }

input {
    color: black;
    background-color: white;
    border-top: 1px solid black;
    border-left: 1px solid black;
    border-bottom: 1px solid gainsboro;
    border-right: 1px solid gainsboro;
}

input:focus, input:active {
    outline: none;
    box-shadow: none;
 }

 #theSquare {
    border: 2px solid;
    border-bottom-color: #535353;
    border-right-color: #535353;
    border-left-color: #dbdbdb;
    border-top-color: #dbdbdb;
    background-color: white;
    padding: 2px;
    display: flex;
    flex-direction: column-reverse;
 }

 .content-container, .alertMessage {
    border: 2px solid;
    border-bottom-color: #535353;
    border-right-color: #535353;
    border-left-color: #dbdbdb;
    border-top-color: #dbdbdb;
    background-color: #bfbfbf;
    padding: 2px;
 }

 .users {
     height: 100%;
 }

 .chat-btn {
    border: 2px solid;
    border-bottom-color: #444;
    border-right-color: #444;
    border-left-color: #a6a6a6;
    border-top-color: #a6a6a6;
    background-color: #bfbfbf;
    font-size: 10px;
    line-height: 0;
    padding: 1px;
    height: 20px;
    width: 45px;
  }

 .giant-size {
     font-size: 40px;
 }

 .section-header, .alertHead {
    background-color: navy;
    padding: 2px 4px 3px 4px;
    position: relative;
    border: 2px solid;
    border-bottom-color: #a6a6a6;
    border-right-color: #444;
    border-left-color: #a6a6a6;
    border-top-color: #a6a6a6;
    color: white;
 }

.section-header > h2 {
    font-weight: bold;
    color: white;
    font-size: 20px;
    margin: 0;
    font-family: sans-serif;
}

.hcb {
    background-color: black !important;
    color: white !important;
    border-color: lime !important;
}
    
.blue {
    color: blue;
    font-weight: bold;
}

